language/move-prover/tests/sources/functional/cast.exp
Move prover returns: exiting with boogie verification errors
error: abort not covered by any of the `aborts_if` clauses

    ┌── tests/sources/functional/cast.move:47:5 ───
    │
 47 │ ╭     spec aborting_u64_cast_incorrect {
 48 │ │         aborts_if false;
 49 │ │     }
    │ ╰─────^
    ·
 45 │         (x as u64)
    │         ---------- abort happened here with execution failure
    │
    =     at tests/sources/functional/cast.move:44: aborting_u64_cast_incorrect
    =         x = <redacted>
    =     at tests/sources/functional/cast.move:45: aborting_u64_cast_incorrect
    =         ABORTED

error: abort not covered by any of the `aborts_if` clauses

    ┌── tests/sources/functional/cast.move:33:5 ───
    │
 33 │ ╭     spec aborting_u8_cast_incorrect {
 34 │ │         aborts_if false;
 35 │ │     }
    │ ╰─────^
    ·
 31 │         (x as u8)
    │         --------- abort happened here with execution failure
    │
    =     at tests/sources/functional/cast.move:30: aborting_u8_cast_incorrect
    =         x = <redacted>
    =     at tests/sources/functional/cast.move:31: aborting_u8_cast_incorrect
    =         ABORTED
